--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "@types/dotenv": "^8.2.0",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^15.0.1",
-    "@types/node-fetch": "^2.5.10",
+    "axios": "^0.24.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.6",
-    "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
